apps/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
spec:
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy:2.1.1
        volumeMounts:
        - mountPath: /app/public/
          name: dashy-vol
        resources:
          limits:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
      volumes:
        - name: dashy-vol
          persistentVolumeClaim:
            claimName: dashy-vol
