apps/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
spec:
  selector:
    app: dashy
  type: ClusterIP
  ports:
  - name: web
    port: 80
    protocol: TCP
