apps/dashy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-dashy
spec:
  parentRefs:
  - name: tls-gateway
    namespace: loadbalancer
  hostnames:
  - "dashboard.kubed.ovh"
  rules:
  - backendRefs:
    - name: dashy-service
      port: 80
